[tool.poetry]
name = "climate-risk-app"
version = "0.1.0"
description = "Aplicação de previsão de risco climático com Streamlit e modelos de ML"
authors = ["Você <email@exemplo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

pandas = "2.2.2"
numpy = "1.26.4"
scikit-learn = "1.4.2"
xgboost = "2.0.3"
matplotlib = "3.8.4"
seaborn = "0.13.2"
gdown = "5.2.0"

streamlit = "1.31.0"
pyarrow = "15.0.2"
watchdog = "4.0.1"
altair = "5.3.0"
protobuf = "4.25.3"
click = "8.1.7"
blinker = "1.8.2"
python-dateutil = "2.9.0"
rich = "13.7.1"
cachetools = "5.3.3"
gitpython = "3.1.43"
tenacity = "8.2.3"
toml = "0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"